k8s/admissionconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  namespace: checkov-whorf
  name: validating-webhook
webhooks:
  - name: validate.checkov-whorf.svc
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions: ["v1","v1beta1"]
    rules:
      - apiGroups: ["apps", ""]
        resources:
          - "deployments"
        apiVersions:
          - "*"
        operations:
          - CREATE
    clientConfig:
      service:
        name: validate
        namespace: checkov-whorf
        path: /validate/
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQvakNDQXVhZ0F3SUJBZ0lVWEovZWswRm4raWxJRkpMYk1idFhTTWE1YzM0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd2V6RUxNQWtHQTFVRUJoTUNSMEl4RGpBTUJnTlZCQWdNQlV4cGJtTnpNUkV3RHdZRFZRUUhEQWhIY21GdQpkR2hoYlRFVE1CRUdBMVVFQ2d3S1FuSnBaR2RsWTNKbGR6RVBNQTBHQTFVRUN3d0dSR1YyVW1Wc01TTXdJUVlEClZRUUREQnAyWVd4cFpHRjBaUzVqYUdWamEyOTJMWGRvYjNKbUxuTjJZekFlRncweU1URXdNVGt4TkRFeU5UZGEKRncweU5EQTRNRGd4TkRFeU5UZGFNSHN4Q3pBSkJnTlZCQVlUQWtkQ01RNHdEQVlEVlFRSURBVk1hVzVqY3pFUgpNQThHQTFVRUJ3 [...]
